Cambiamos estrategia, guardamos la respuestas de la api en crudo en un sqlite para posteriormente generar el json de salida, se actualizar el json de salida para que sea estandar y cubrir futuras tiendas y plataformas