@@ -1,81 +1,85 @@
-# Steam Data Scraper & Parquet Converter
+# 🚂 VoxGamer Data Sync (Steam Adapter)
 
-Este proyecto es una herramienta robusta desarrollada en Java para descargar metadatos de juegos de la API de Steam, guardarlos en un formato JSON y, finalmente, convertirlos a un dataset Parquet altamente eficiente.
+Este proyecto es el núcleo del sistema de datos de **VoxGamer**. Su función es sincronizar el catálogo completo de Steam, filtrar el contenido relevante y generar una base de datos estandarizada y agnóstica de la plataforma.
 
-El objetivo principal es crear una base de datos de juegos que pueda ser actualizada periódicamente y utilizada por otras aplicaciones (como una app móvil en Flutter) de forma rápida y con un coste cero, alojando los datos finales en GitHub.
+## 🏗️ Arquitectura ELT (Extract, Load, Transform)
 
-## ✨ Características Principales
+El sistema se divide en dos procesos principales que conforman una arquitectura de datos profesional:
 
-- **Scraping Inteligente:** El script detecta automáticamente los juegos ya descargados. En ejecuciones posteriores, solo busca y añade los lanzamientos más recientes, deteniéndose de forma autónoma (tras detectar 50 juegos repetidos) cuando la base de datos está al día.
-- **Recuperación ante Fallos:** Si el proceso se interrumpe (por un corte de red, un error, etc.), el script guarda el progreso y reanuda exactamente donde lo dejó la próxima vez que se ejecute.
-- **Caché de IDs:** La lista completa de AppIDs de Steam se descarga y guarda en una caché local (`lista_appids.txt`). Si se inicia una nueva búsqueda completa, esta caché se renueva automáticamente para incluir los últimos lanzamientos.
-- **Conversión a Parquet:** Incluye una clase dedicada (`JsonToParquet.java`) para convertir el archivo JSON final a formato Parquet. Parquet es un formato columnar, comprimido y optimizado, ideal para consultas rápidas y reducir el tamaño de los datos.
-- **Compatibilidad Windows:** El proyecto incluye los binarios necesarios (`winutils`) para ejecutar Apache Spark en Windows sin configuraciones complejas de Hadoop.
+### 1. `SteamRawCollector` (Fase de Extracción y Carga)
 
-## 📂 Estructura del Proyecto
+Es el componente encargado de la recolección masiva y el filtrado inicial. Su objetivo es crear una copia local y robusta de los datos de Steam.
 
-- `src/SteamScraper.java`: Clase principal que conecta con la API de Steam, descarga los datos y los guarda en `juegos_nuevos.json`.
-- `src/JsonToParquet.java`: Clase que lee `juegos_nuevos.json` y lo convierte a `SteamGames.parquet` usando Apache Spark.
-- `bin/`: Contiene utilidades nativas de Hadoop (`winutils.exe`, `hadoop.dll`) requeridas para que Spark funcione correctamente en Windows.
-- `build.gradle`: Configuración de Gradle con las dependencias (Jackson, Spark, Hadoop) y tareas personalizadas.
-- `juegos_nuevos.json`: Archivo intermedio donde se acumulan los datos crudos en JSON.
-- `SteamGames.parquet`: Carpeta de salida que contiene el dataset optimizado.
+*   **Funcionamiento Detallado:**
+    1.  **Carga de Estado Previo:** Al iniciar, consulta la base de datos `steam_raw.sqlite` para obtener dos listas de IDs:
+        *   Juegos ya procesados y finalizados.
+        *   IDs ignorados (DLCs, demos, vídeos, etc.).
+    2.  **Descarga del Catálogo Completo:** Se conecta a la API de Steam para descargar la lista completa de `app_id` existentes.
+    3.  **Detección de Novedades:** Compara el catálogo de Steam con los IDs locales y crea una lista de "pendientes", que incluye tanto juegos nuevos como aquellos que estaban en "Coming Soon" y podrían haber sido lanzados.
+    4.  **Procesamiento en Lotes:** Itera sobre la lista de pendientes y, para cada `app_id`:
+        *   Descarga su JSON de detalles desde la API de Steam.
+        *   **Filtro Inteligente:** Analiza el JSON para determinar el tipo de contenido.
+            *   Si es un **juego** (`"type":"game"`), lo guarda o actualiza en la tabla `steam_raw_data`.
+            *   Si es cualquier otra cosa (DLC, demo, banda sonora), lo añade a la tabla `steam_ignored_ids` para no volver a consultarlo en el futuro.
+    5.  **Manejo de Errores y Límites:** Está preparado para manejar errores de red y los límites de peticiones de la API de Steam (error 429), reintentando automáticamente tras un tiempo de espera.
 
-## 🚀 Cómo Usar el Proyecto
+### 2. `SteamScraper` (Fase de Transformación)
 
-### Prerrequisitos
-- **JDK 17:** El proyecto está configurado para Java 17.
-- **IDE:** Recomendado IntelliJ IDEA o Android Studio.
+Este componente se encarga de transformar los datos crudos en un formato limpio, estandarizado y listo para ser consumido por otras aplicaciones.
 
-### Pasos para la Ejecución
+*   **Funcionamiento Detallado:**
+    1.  **Conexión a la Base de Datos:** Lee todos los registros de la tabla `steam_raw_data` de `steam_raw.sqlite`.
+    2.  **Procesamiento Individual:** Para cada juego, realiza las siguientes transformaciones:
+        *   **Validación:** Descarta juegos marcados como `"coming_soon":true` o aquellos que no tienen una fecha de lanzamiento válida.
+        *   **Extracción de Datos:** Parsea manualmente el JSON para extraer campos clave como título, descripción, imagen principal, géneros, etc.
+        *   **Limpieza y Estandarización:**
+            *   Genera un `slug` a partir del título (ej: "The Witcher 3" -> "the-witcher-3").
+            *   Convierte la fecha de lanzamiento a formato `YYYY-MM-DD`.
+            *   Limpia y formatea la lista de idiomas (separando voces y textos).
+            *   Extrae el `metacritic` score y el espacio en disco requerido.
+    3.  **Generación del JSON Final:** Construye un objeto JSON con la estructura final y lo escribe en el fichero `steam_games.json`. El resultado es un único fichero JSON que contiene un array con todos los juegos procesados.
 
-1.  **Clonar el Repositorio:**
-    ```bash
-    git clone https://github.com/andymartin1991/SteamDataScraper.git
-    ```
+## 🚀 Cómo Ejecutar
 
-2.  **Abrir en el IDE:**
-    Abre la carpeta del proyecto. El IDE debería detectar automáticamente que es un proyecto Gradle y descargar las dependencias.
+### Requisitos
+*   Java 17 (Amazon Corretto recomendado).
+*   Gradle.
 
-3.  **Ejecutar el Scraper (Descarga de Datos):**
-    Para iniciar la descarga o actualización de juegos, ejecuta la tarea principal:
-    
-    **Opción A (Gradle - Recomendada):**
-    Ejecuta el siguiente comando en la terminal o busca la tarea `application > run` en el panel de Gradle:
-    ```bash
-    ./gradlew run
-    ```
-    
-    **Opción B (Desde el Editor):**
-    Abre `src/SteamScraper.java`, haz clic derecho y selecciona `Run 'SteamScraper.main()'`.
+### Ejecución
+Puedes ejecutar cada fase de forma independiente usando las tareas de Gradle:
 
-    > **Nota:** La primera ejecución tomará tiempo ya que construye la base de datos desde cero. Las ejecuciones futuras solo descargarán los juegos nuevos.
+1.  Abre el panel de **Gradle** en tu IDE.
+2.  Ve a `Tasks` -> `Application`.
+3.  Ejecuta la tarea que necesites:
+    *   **`runCollector`**: Para la fase de extracción y carga.
+    *   **`runScraper`**: Para la fase de transformación.
 
-4.  **Convertir a Parquet:**
-    Una vez finalizado el scraper, convierte los datos a Parquet.
-    
-    **Opción A (Gradle - Muy Recomendada):**
-    Usa esta tarea específica que ya configura los argumentos de la JVM necesarios para Spark en Java 17+:
-    ```bash
-    ./gradlew runJsonToParquet
-    ```
-    (O busca la tarea `application > runJsonToParquet` en el panel de Gradle).
+O desde la terminal:
+```bash
+# Para recolectar datos de Steam
+./gradlew runCollector
 
-    **Opción B (Desde el Editor):**
-    Si ejecutas `src/JsonToParquet.java` manualmente con clic derecho, es posible que necesites añadir la siguiente opción a la configuración de la VM (VM Options) para evitar errores de acceso en Java 17+:
-    `--add-opens=java.base/sun.nio.ch=ALL-UNNAMED`
+# Para transformar los datos recolectados a JSON
+./gradlew runScraper
+```
 
-### Actualizar la Base de Datos en GitHub
+## 📂 Estructura de Datos (SQLite)
 
-La carpeta `SteamGames.parquet` se genera en tu ordenador local. Para hacerla accesible a tu aplicación:
+El archivo `steam_raw.sqlite` contiene dos tablas clave:
 
-1.  Abre la terminal en la raíz del proyecto.
-2.  Ejecuta los comandos de Git:
+*   **`steam_raw_data`**:
+    *   `app_id` (PK): ID de Steam.
+    *   `json_data`: El JSON completo y original devuelto por la API.
+    *   `fecha_sync`: Cuándo se actualizó por última vez.
 
-    ```bash
-    git add .
-    git commit -m "Actualizada base de datos con últimos juegos"
-    git push
-    ```
+*   **`steam_ignored_ids`**:
+    *   `app_id` (PK): IDs de DLCs y contenido no deseado.
 
-¡Listo! Tu repositorio ahora aloja la versión más reciente de los datos optimizados.
+## 🛠️ Tecnologías
+*   **Java 17**: Lenguaje principal.
+*   **SQLite**: Almacenamiento intermedio robusto y portable.
+*   **Gradle**: Gestión de dependencias y tareas.
+*   **Steam Web API**: Fuente de datos.
+
+---
+*VoxGamer Data Engineering Team*
